src/styles/style.css
/* 
  Table of Contents
    1. variables
    2. global styles
    3. accessibility
    4. header
      4.1 location search
    5. main
      5.1 main nav
      5.2 forecast content
    6. footer
      6.1 secondary nav
    7. class toggles
    8. media queries
      8.1 responsiveness
      8.2 reduced motion
*/

/* ========== 1. variables ========== */
:root {
  /* backgrounds */
  --bg-alert-header: rgba(150, 0, 0, 0.87);
  --bg-alert-description: rgba(175, 0, 0, 0.87);
  /* black and white */
  --black-high: rgba(0, 0, 0, 0.87);
  --black-med: rgba(0, 0, 0, 0.6);
  --black-low: rgba(0, 0, 0, 0.38);
  --white-high: rgba(255, 255, 255, 0.871);
  --white-med: rgba(255, 255, 255, 0.6);
  --white-low: rgba(255, 255, 255, 0.38);
  /* borders/outlines */
  --border-alert: 2px solid var(--bg-base);
  /* misc */
  --active: 0.87;
  --inactive: 0.6;
  --disabled: 0.38;
}

:root[data-theme='dark'] {
  /* brand colors */
  --color-primary: ; /* 200 tonal range */
  --color-primary-var: ; /* 500 tonal range */
  --color-secondary: ; /* 50-200 tonal range */
  --color-secondary-var: ; /* 50-200 tonal range */
  /* backgrounds */
  --bg-base: rgb(18, 18, 30);
  --bg-accessibility: rgb(30, 30, 120);
  --bg-header: rgb(18, 18, 80);
  --bg-units-btn: rgb(70, 70, 70);
  --bg-search-input: rgb(30, 30, 30);
  --bg-result-hover: rgb(50, 50, 50);
  --bg-search-btn: rgb(44, 44, 44);
  --bg-weather-info: rgb(30, 30, 50);
  /* elevation refs */
  --elevation-00dp: rgb(18, 18, 18); /* text btn, top app bar (rest), */
  --elevation-01dp: rgb(30, 30, 30); /* searchbar (rest), card (rest), switch */
  --elevation-02dp: rgb(33, 33, 33); /* btn (resting) */
  --elevation-03dp: rgb(37, 37, 37); /* refresh indicator search bar */
  --elevation-04dp: rgb(39, 39, 39); /* top app bar (scrolled/resting) */
  --elevation-06dp: rgb(44, 44, 44); /* floating action btn snackbar */
  --elevation-08dp: rgb(
    46,
    46,
    46
  ); /* btm/side sheet, btm nav/app bar, menu/submenu, card (picked up), btn (press) */
  --elevation-12dp: rgb(51, 51, 51); /* floating action btn (pressed) */
  --elevation-16dp: rgb(54, 54, 54); /* modal bottom/side, nav drawer */
  --elevation-24dp: rgb(56, 56, 56); /* dialogue */
  /* text */
  --text-primary: rgba(255, 255, 255, 0.871);
  --text-invert: rgba(0, 0, 0, 0.87);
  --text-link-unvisited: rgb(153, 153, 255);
  --text-link-visited: rgb(204, 128, 255);
  /* borders/outlines */
  --border-primary: 1px solid rgba(255, 255, 255, 0.6);
  --border-primary-focus: 1px solid rgb(255, 255, 255);
  --border-input: 1px inset rgba(255, 255, 255, 0.6);
  --border-input-focus: 2px inset rgba(255, 255, 255, 0.87);
  --border-search-btn: 2px outset rgba(255, 255, 255, 0.6);
  --border-search-btn-focus: 2px solid rgba(255, 255, 255, 0.87);
  --border-switch: 1px solid rgba(255, 255, 255, 0.6);
  --border-switch-focus: 2px solid rgb(255, 255, 255);
  --border-nav-tab: 2px solid rgba(60, 60, 255, 0.87);
  --border-nav-tab-inactive: 2px solid rgba(60, 60, 255, 0.38);
  --border-table-separator: 2px solid rgb(50, 50, 80);
  --outline-primary-focus: 1px solid rgba(255, 255, 255, 0.6);
  /* images/icons */
  /* misc */
  --error: rgb(222, 150, 163);
  --warning: rgb(255, 245, 157);
  --success: rgb(165, 214, 167);
  --info: rgb(144, 202, 249);
  --weather-icon-filter: none;
}

:root[data-theme='light'] {
  /* brand colors */
  --color-primary: ; /* 500 tonal range */
  --color-primary-var: ; /* +/- 200 of primary */
  --color-secondary: ; /* 500 tonal range */
  --color-secondary-var: ; /* +/- 200 of primary */
  /* backgrounds */
  --bg-base: rgb(240, 240, 240);
  --bg-accessibility: rgb(255, 185, 65);
  --bg-header: rgb(255, 166, 0);
  --bg-units-btn: rgb(200, 200, 200);
  --bg-search-input: rgb(240, 240, 240);
  --bg-result-hover: rgb(206, 206, 206);
  --bg-search-btn: rgb(220, 220, 220);
  --bg-weather-info: rgb(255, 255, 255);
  /* text */
  --text-primary: rgba(0, 0, 0, 0.87);
  --text-invert: rgb(255, 255, 255, 0.87);
  --text-link-unvisited: #1414ff;
  --text-link-visited: #7400c2;
  /* borders/outlines */
  --border-primary: 1px solid rgba(0, 0, 0, 0.6);
  --border-primary-focus: 1px solid rgb(0, 0, 0);
  --border-input: 1px inset rgba(0, 0, 0, 0.6);
  --border-input-focus: 2px inset rgba(0, 0, 0, 0.87);
  --border-search-btn: 2px outset rgba(0, 0, 0, 0.6);
  --border-search-btn-focus: 2px solid rgba(0, 0, 0, 0.87);
  --border-switch: 1px solid rgba(0, 0, 0, 0.6);
  --border-switch-focus: 2px solid rgb(0, 0, 0);
  --border-nav-tab: 2px solid rgba(185, 121, 0, 0.87);
  --border-nav-tab-inactive: 2px solid rgba(185, 121, 0, 0.38);
  --border-table-separator: 2px solid rgb(201, 201, 201);
  --outline-primary-focus: 2px solid rgba(0, 0, 0, 0.6);
  /* images/icons */
  /* misc */
  --error: rgb(87, 0, 16);
  --warning: rgb(255, 235, 59);
  --success: rgb(76, 175, 80);
  --info: rgb(33, 150, 243);
  --weather-icon-filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.75));
}

/* ========== 2. global styles ========== */
*:focus {
  outline: none;
}

body {
  background-color: var(--bg-base);
  font-family: 'Rubik', Verdana, Geneva, Tahoma, sans-serif;
}

a {
  text-decoration: underline solid;
}

a:hover,
a:focus {
  border-bottom: var(--border-primary);
}

button:hover,
*[role='button'] {
  cursor: pointer;
}

/* ========== 3. accessibility ========== */
#accessibility-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 10px 20px;
  background-color: var(--bg-accessibility);
}

#skip-link {
  color: var(--text-primary);
  border-bottom: 1px solid transparent;
}

#skip-link:hover,
#skip-link:focus {
  border-bottom: var(--border-primary);
}

#theme-switch {
  display: flex;
  align-items: center;
  width: 3.75rem;
  height: 1.5rem;
  padding: 0 5px;
  border-radius: 10px;
  background-color: var(--bg-base);
  border: var(--border-switch);
  overflow: hidden;
  transition: background-color 300ms linear;
}

#theme-switch:hover {
  cursor: pointer;
}
/* ... */

